--- a/example/src/example.less
+++ b/example/src/example.less
@@ -1,4 +1,4 @@
-@import url(http://fonts.googleapis.com/css?family=Raleway:400,700,800);
+@import url(https://fonts.googleapis.com/css?family=Raleway:400,700,800);
 
 *, *:after, *:before { -webkit-box-sizing: border-box; box-sizing: border-box; }
 
@@ -33,7 +33,7 @@ main {
   padding: 3em 2em;
   text-align: center;
   background: #b4bad2;
-  overflow: scroll;
+  overflow: auto;
 }
 
 h1 {
@@ -183,6 +183,10 @@ h1 {
     margin-left: 10px;
     font-weight: 700;
   }
+}
+
+.bm-item:focus {
+  outline: none;
 }
 
 //
